--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,41 +50,46 @@
     </div>
   </nav>
 
-  <main class="container row">
-    <div>
-      <div class="row">
-        <div class="col l12 s12">
-          <h5 class="white-text center black">CONTACTO</h5>
-          <p class="grey-text text-darken-3">
-            ¡Hola! Muchas gracias por tu interés en contactarme. Tu mensaje significa mucho para mí y me alegra saber
-            que te interesa conectarte. Para asegurarnos de que no se pierda ninguna información importante, te invito a
-            llenar el formulario de contacto que se encuentra en debajo. De esta manera, puedo asegurarme de que reciba
-            tu mensaje y pueda responder a tus preguntas de
-            manera efectiva.
-          </p>
+  <main class="container">
+    <div class="row">
+      <h5 class="white-text center black">CONTACTO</h5>
+
+      <div class="col l3 m12 s12 center">
+          <div class="center card">
+            <div class="row center other-contact">
+              <div class="col s6 m12">
+                <h6>LLamada</h6>
+                <a class="" href="tel:XXX-XXX-XXXX" target="
+                "><img class="pulse" src="../images/ico/call.png" alt=""></a>
+              </div>
+              <div class="col s6 m12">
+                <h6>Whatsapp</h6>
+                <a class="" href=" https://wa.me/+1100000000" target="
+                "><img class="" src="../images/ico/whatsapp.png" alt=""></a>
+              </div>
+            </div>
           </div>
-        </div>
+
       </div>
 
-      <div class="row card-form z-depth-5 container s10">
-        <h5 class="col s12 center blue-text text-darken-4">FORMULARIO</h5>
+      <div class="col l9 m12 s12 card center">
+        <div class="center">
+          <div class="col s12 center other-contact">
+            <h5 class="center">FORMULARIO</h5>
         <form class="col s12" id="form">
-
+          
           <div class="row">
-
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">person</i>
               <input id="first_name" type="text" class="validate" />
               <label for="first_name">Nombre</label>
             </div>
-
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">account_circle</i>
               <input id="last_name" type="text" class="validate" />
               <label for="last_name">Apellido</label>
             </div>
           </div>
-
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix">mail</i>
@@ -92,7 +97,6 @@
               <label for="email">Email</label>
             </div>
           </div>
-
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix">mode_edit</i>
@@ -101,24 +105,16 @@
             </div>
           </div>
 
-
           <div class="card-action center">
             <a class="btn center pink darken-4 waves-effect  hoverable" id="enviar-form">Enviar mensaje</a>
           </div>
-
         </form>
       </div>
+    </div>
   </main>
 
   <footer class="page-footer transparent">
-    <div class="row center container">
-      <div class="col s12 center other-contact">
-        <h5 class="center white-text black">OTRAS FORMAS DE CONTACTO</h5>
-        <a class="" href="tel:XXX-XXX-XXXX" target="
-        "><img class="pulse" src="../images/ico/call.png" alt=""></a>
-        <a class="" href=" https://wa.me/+1100000000" target="
-        "><img class="" src="../images/ico/whatsapp.png" alt=""></a>
-      </div>
+
   </footer>
 
   <div class="footer-copyright">
