--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
 
   <body>
-    <nav class="nav container" role="navigation">
+    <nav class="nav container transparent z-depth-0" role="navigation">
       <div class="nav-wrapper">
         <a
           id="logo-container"
@@ -49,25 +49,22 @@
           >Python Developer</a
         >
         <ul class="left hide-on-med-and-down">
-          <li><a class="waves-effect link" href="./index.html">Inicio</a></li>
-          <li><a class="waves-effect link" href="badges.html">Sobre Mí</a></li>
+          <li><a class="waves-effect link" href="./index.html">Resume</a></li>
+          <li><a class="waves-effect link" href="./pages/formation.html">Educación</a></li>
           <li>
-            <a class="waves-effect link" href="collapsible.html">Educación</a>
+            <a class="waves-effect link" href="./pages/experience.html">Experiencia</a>
           </li>
-          <li>
-            <a class="waves-effect link" href="Experiencia">Experiencia</a>
-          </li>
+          <li><a class="waves-effect link" href="./pages/contact.html">Contacto</a></li>
         </ul>
 
-        <ul id="nav-mobile" class="sidenav indigo darken-4">
+        <ul id="nav-mobile" class="sidenav sidebar">
           <li><a href="#!">MENU</a></li>
           <li><div class="divider"></div></li>
           <li><a class="subheader">JOHN PANDAS</a></li>
-          <li><a class="waves-effect" href="#">Inicio</a></li>
-          <li><a class="waves-effect" href="">Sobre Mí</a></li>
-          <li><a class="waves-effect" href="">Educación</a></li>
-          <li><a class="waves-effect" href="">Experiencia</a></li>
-          <li><a class="waves-effect" href="">Contacto</a></li>
+          <li><a class="waves-effect" href="./index.html">Resume</a></li>
+          <li><a class="waves-effect" href="./pages/formation.html">Educación</a></li>
+          <li><a class="waves-effect" href="./pages/experience.html">Experiencia</a></li>
+          <li><a class="waves-effect" href="./pages/contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a
@@ -195,22 +192,22 @@
     </footer>
 
     <div class="oculto fixed-action-btn" id="floatbtn">
-      <a class="btn-floating btn-large pink darken-4 pulse">
+      <a class="btn-floating btn-large blue darken-2 pulse">
         <i class="large material-icons">widgets</i>
       </a>
       <ul>
         <li>
-          <a href="#" class="btn-floating red"
+          <a href="./index.html" class="btn-floating red"
             ><i class="material-icons">face</i></a
           >
         </li>
         <li>
-          <a class="btn-floating yellow darken-1"
+          <a href="./pages/formation.html"   class="btn-floating yellow darken-1"
             ><i class="material-icons">school</i></a
           >
         </li>
         <li>
-          <a class="btn-floating green"><i class="material-icons">work</i></a>
+          <a href="./pages/experience.html"  class="btn-floating green"><i class="material-icons">work</i></a>
         </li>
         <li>
           <a href="/pages/contact.html" class="btn-floating blue"
