--- a/pages/experience.html
+++ b/pages/experience.html
@@ -1,107 +1,269 @@
 <!DOCTYPE html>
 <html lang="es">
   <!--===========HEAD=============-->
+
   <head>
     <!---------- metas ---------->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!---------- links ---------->
-    <link rel="stylesheet" href="style.css" />
+      <!-- ==================== FAVICON ======================= -->
+  <link rel="icon" type="image/png" href="../images/ico/experience.png" />
 
-    <!---------- scripts -------->
-    <script src="" type="text/javascript"></script>
-
-    <!-- =========== FAVICON =============== -->
+    <!--======================== CSS ========================-->
     <link
-      rel="icon"
-      type="image/png"
-      href="../images/ico/work.png"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="../css/materialize.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link rel="stylesheet" href="../css/contact.css" />
+    <link
+      href="../css/style.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
     />
 
-    <!--============= TITLE ============-->
-    <title>Experiencia</title>
+    <!--===================== TITLE =========================-->
+    <title>Contacto</title>
   </head>
 
-  <!--===========BODY=============-->
   <body>
-    <nav class="nav responsive-table"  role="navigation">
-        <div class="nav-wrapper">
-          <a
-            id="logo-container"
-            href="#"
-            class="brand-logo right indigo-text text-lighten-2"
-            >Python Developer Jr</a
-          >
-          <ul class="left hide-on-med-and-down">
-            <li><a class="waves-effect link" href="./index.html">Inicio</a></li>
-            <li><a class="waves-effect link" href="badges.html">Sobre Mí</a></li>
-            <li>
-              <a class="waves-effect link" href="collapsible.html">Educación</a>
-            </li>
-            <li>
-              <a class="waves-effect link" href="Experiencia">Experiencia</a>
-            </li>
-          </ul>
-  
-          <ul id="nav-mobile" class="sidenav indigo darken-4">
-            <li><a href="#!">MENU</a></li>
-            <li><div class="divider"></div></li>
-            <li><a class="subheader">JOHN PANDAS</a></li>
-            <li><a class="waves-effect" href="#">Inicio</a></li>
-            <li><a class="waves-effect" href="">Sobre Mí</a></li>
-            <li><a class="waves-effect" href="">Educación</a></li>
-            <li><a class="waves-effect" href="">Experiencia</a></li>
-            <li><a class="waves-effect" href="">Contacto</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-            ><i class="material-icons">menu</i></a
-          >
+    <!-- ==================== NAVBAR ======================= -->
+    <nav class="nav transparent z-depth-0 container" role="navigation">
+      <div class="nav-wrapper">
+        <a id="logo-container" href="#" class="brand-logo right nav-sub"
+          >John Pandas</a
+        >
+        <ul class="left hide-on-med-and-down">
+          <li><a class="waves-effect link" href="../index.html">Inicio</a></li>
+          <li>
+            <a class="waves-effect link" href="./formation.html">Educación</a>
+          </li>
+          <li>
+            <a class="waves-effect link" href="./experience.html"
+              >Experiencia</a
+            >
+          </li>
+          <li>
+            <a class="waves-effect link" href="./contact.html">Contacto</a>
+          </li>
+        </ul>
+
+        <!-- ============= SIDEBAR (MOBILE) ======================= -->
+        <ul id="nav-mobile" class="sidenav sidebar">
+          <li><a href="#!">MENU</a></li>
+          <li>
+            <div class="divider"></div>
+          </li>
+          <li><a class="subheader">JOHN PANDAS</a></li>
+          <li><a class="waves-effect" href="../index.html">Inicio</a></li>
+          <li><a class="waves-effect" href="./formation.html">Educación</a></li>
+          <li>
+            <a class="waves-effect" href="./experience.html">Experiencia</a>
+          </li>
+          <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+      </div>
+    </nav>
+
+    <main class="container">
+      <h3 class="center">EXPERIENCIA</h3>
+      <section class="container">
+        <table>
+          <thead>
+            <tr>
+              <th class="center">Puesto</th>
+              <th class="center">Techs</th>
+              <th class="center">Compañía</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>
+                <h6 class="work-title">Python Developer Jr</h6>
+              </td>
+              <td>
+                <ul>
+                  <li></li>
+                  <li>e</li>
+                  <li>e</li>
+                </ul>
+              </td>
+              <td class="center">
+                <ul>
+                  <li><span class="company"> Google </span></li>
+                  <li>2018-2022</li>
+                  <li>4 años</li>
+                </ul>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h6 class="work-title">Python Developer Jr</h6>
+              </td>
+              <td>
+                <ul>
+                  <li></li>
+                  <li>e</li>
+                  <li>e</li>
+                </ul>
+              </td>
+              <td class="center">
+                <ul>
+                  <li><span class="company"> Google </span></li>
+                  <li>2018-2022</li>
+                  <li>4 años</li>
+                </ul>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h6 class="work-title">Python Developer Jr</h6>
+              </td>
+              <td>
+                <ul>
+                  <li></li>
+                  <li>e</li>
+                  <li>e</li>
+                </ul>
+              </td>
+              <td class="center">
+                <ul>
+                  <li><span class="company"> Google </span></li>
+                  <li>2018-2022</li>
+                  <li>4 años</li>
+                </ul>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h6 class="work-title">Python Developer Jr</h6>
+              </td>
+              <td>
+                <ul>
+                  <li></li>
+                  <li>e</li>
+                  <li>e</li>
+                </ul>
+              </td>
+              <td class="center">
+                <ul>
+                  <li><span class="company"> Google </span></li>
+                  <li>2018-2022</li>
+                  <li>4 años</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+
+   <!-- ========== FLOATING BUTTON ======================= -->
+  <div class="oculto fixed-action-btn" id="floatbtn">
+    <a class="btn-floating btn-large btn-float pulse">
+      <i class="large material-icons">widgets</i>
+    </a>
+    <ul>
+      <li>
+        <a href="../index.html" class="btn-floating red"
+          ><i class="material-icons">home</i></a
+        >
+      </li>
+      <li>
+        <a href="formation.html"   class="btn-floating yellow darken-1"
+          ><i class="material-icons">school</i></a
+        >
+      </li>
+      <li>
+        <a href="experience.html"  class="btn-floating green"><i class="material-icons">work</i></a>
+      </li>
+      <li>
+        <a href="contact.html" class="btn-floating blue"
+          ><i class="material-icons">mail</i></a
+        >
+      </li>
+    </ul>
+  </div>
+
+
+  <!-- =================== FOOTER ======================= -->
+  <footer class="page-footer footer blue-grey darken-2">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">John Pandas</h5>
+          <p class="grey-text text-lighten-4">
+            Gracias por interesarte en mi currículum. Cualquier consulta estoy
+            a disposición. ¡No dudes en contactarme en cualquiera de mis
+            métodos de contacto!
+          </p>
         </div>
-      </nav>
+        <div class="col l3 s6">
+          <h5 class="white-text">Navegación</h5>
+          <ul>
+            <li><a class="white-text" target="_blank" href="../index.html">Inicio</a></li>
+            <li><a class="white-text" target="_blank" href="./formation.html">Formación</a></li>
+            <li><a class="white-text" target="_blank" href="./experience.html">Experiencia</a></li>
+            <li><a class="white-text" target="_blank" href="./contact.html">Contacto</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s6">
+          <h5 class="white-text">Conectemos</h5>
+          <ul>
+            <li><a class="white-text" href="tel:XXX-XXX-XXXX">Teléfono</a></li>
+            <li><a class="white-text" href="#mailme">Mail</a></li>
+            <li><a class="white-text" href="https://wa.me/+1100000000">whatsapp</a></li>
+            <li><a class="white-text" href="https://twitter.com/search?q=develop&src=typed_query&f=top" target="_blank">Twitter</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright center">
+      <div class="container center">
+        Powered by 
+        <a class="pink-text text-lighten-1" href="http://materializecss.com"
+          >Materialize
+        </a>
+      </div>
+    </div>
+    <div class="footer-copyright center">
+      <div class="container center">
+        Design by
+        <a class="blue-text text-darken-2" href=""
+          >J.P. Esparza</a
+        >
+      </div>
+    </div>
+    <div class="footer-copyright center">
+      <div class="container center">
+        <p class="amber-text text-daken-2">Repo del proyecto</p>
+        <a class="" href="https://github.com/Jesparzarom/CurriculumWeb" target="_blank"
+          ><img src="../images/ico/github.png" width="100px" alt="" class="ghrepo"></a
+        >
+      </div>
+    </div>
+  </footer>
 
-      <main>
-        <section>
-
-            <table>
-                <thead>
-                  <tr>
-                      <th>Name</th>
-                      <th>Item Name</th>
-                      <th>Item Price</th>
-                  </tr>
-                </thead>
-        
-                <tbody>
-                  <tr>
-                    <td>Alvin</td>
-                    <td>Eclair</td>
-                    <td>$0.87</td>
-                  </tr>
-                  <tr>
-                    <td>Alan</td>
-                    <td>Jellybean</td>
-                    <td>$3.76</td>
-                  </tr>
-                  <tr>
-                    <td>Jonathan</td>
-                    <td>Lollipop</td>
-                    <td>$7.00</td>
-                  </tr>
-                </tbody>
-              </table>
-        </section>
-    
-      </main>
-
-
-
-
-
-
-   <!--  Scripts-->
-   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-   <script src="../js/materialize.js"></script>
-   <script src="../js/init.js"></script>
+<!--SCRIPTS-->
+<!--#region-->
+  <script type="text/javascript"  src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="../js/materialize.js"></script>
+  <script type="text/javascript" src="../js/init.js"></script>
+  <script type="text/javascript" src="../js/form.js"></script>
+<!--#endregion-->
   </body>
 </html>
