--- a/pages/experience.html
+++ b/pages/experience.html
@@ -90,80 +90,80 @@
           <tbody>
             <tr>
               <td>
-                <h6 class="work-title">Python Developer Jr</h6>
+                <h6 class="work-title">Python Developer</h6>
               </td>
               <td>
                 <ul>
-                  <li></li>
-                  <li>e</li>
-                  <li>e</li>
+                  <li>Back-end</li>
+                  <li>Python</li>
+                  <li>SQL</li>
                 </ul>
               </td>
               <td class="center">
                 <ul>
                   <li><span class="company"> Google </span></li>
                   <li>2018-2022</li>
-                  <li>4 años</li>
+                  <li>4 año</li>
                 </ul>
               </td>
             </tr>
 
             <tr>
               <td>
-                <h6 class="work-title">Python Developer Jr</h6>
+                <h6 class="work-title">Pasante FullStack</h6>
               </td>
               <td>
                 <ul>
-                  <li></li>
-                  <li>e</li>
-                  <li>e</li>
+                  <li>Full Stack</li>
+                  <li>Python|Django</li>
+                  <li>HTML|CSS|JS</li>
                 </ul>
               </td>
               <td class="center">
                 <ul>
-                  <li><span class="company"> Google </span></li>
-                  <li>2018-2022</li>
-                  <li>4 años</li>
+                  <li><span class="company">Instagram</span></li>
+                  <li>2017-2018</li>
+                  <li>1 año</li>
                 </ul>
               </td>
             </tr>
 
             <tr>
               <td>
-                <h6 class="work-title">Python Developer Jr</h6>
+                <h6 class="work-title">Pasantía Python</h6>
               </td>
               <td>
                 <ul>
-                  <li></li>
-                  <li>e</li>
-                  <li>e</li>
+                  <li>Back-end</li>
+                  <li>Python</li>
+                  <li>MongoDB</li>
                 </ul>
               </td>
               <td class="center">
                 <ul>
-                  <li><span class="company"> Google </span></li>
-                  <li>2018-2022</li>
-                  <li>4 años</li>
+                  <li><span class="company">Telefónica</span></li>
+                  <li>2016-2017</li>
+                  <li>1 año</li>
                 </ul>
               </td>
             </tr>
 
             <tr>
               <td>
-                <h6 class="work-title">Python Developer Jr</h6>
+                <h6 class="work-title">Desarrollador Front</h6>
               </td>
               <td>
                 <ul>
-                  <li></li>
-                  <li>e</li>
-                  <li>e</li>
+                  <li>Front-end</li>
+                  <li>HTML | CSS | JS</li>
+                  <li>Bootstrap | ReactJS</li>
                 </ul>
               </td>
               <td class="center">
                 <ul>
                   <li><span class="company"> Google </span></li>
-                  <li>2018-2022</li>
-                  <li>4 años</li>
+                  <li>2015-2020</li>
+                  <li>5 años</li>
                 </ul>
               </td>
             </tr>
